fix footer too large

--- a/css/page3-styles.css
+++ b/css/page3-styles.css
@@ -1,4 +1,4 @@
-b* {
+* {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
@@ -229,5 +229,3 @@ footer {
     width: 90%;
   }
 }
-page3-styles.css
-4 Ko
